--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,7 @@ label {
 
 body {
 	background-image: url("../images/quote-bg-img.jpg");
-    font-family: 'Bad Script', cursive;
+    font-family: 'Coda Caption', sans-serif;
     background-repeat: no-repeat;
     background-size: cover;
 }
