--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,23 @@
 button, div, form, input {
-	margin: 5px;
+    margin: 5px;
+    
 }
 
 img {
 	max-width: 200px;
-	max-height: 200px;
+    max-height: 200px;
+    opacity: .8;
 }
 
 label {
-    color: #fff;
+    color: gold;
+    font-size: 24pt
 }
 
 .btn-default {
     color: #000;
     font-size: medium;
+    opacity: .5;
 }
 
 body {
@@ -30,4 +34,6 @@ body {
 
 .jumbotron {
     text-align: center;
+    opacity: .5;
+
 }
